<resources>
    <string name="app_name">Dino Pedia</string>
    <string name="profile_icon_description">Profile Icon</string>
    <string name="info_dino_icon">Ikon Dino</string>
    <string name="info_dino_name">Nama Famili</string>
    <string name="info_dino_desc">Deskripsi</string>
    <string name="info_dino_characteristic">periode hidup</string>
    <string name="info_dino_habitat">karakteritik fisik</string>
    <string name="info_dino_process">habitat dan lingkungan</string>
    <string name="info_dino_perilaku">perilaku</string>
    <string name="info_dino_klasifikasi">klasifikasi</string>
    <string name="dino">Gambar Dino</string>
    <string-array name="dino_name">
        <item>Tyrannosauridae</item>
        <item>Stegosauridae</item>
        <item>Triceratopsidae</item>
        <item>Sauropodae</item>
        <item>Hadrosauridae</item>
        <item>Ceratopsidae</item>
        <item>Velociraptoridae</item>
        <item>Ankylosauridae</item>
    </string-array>
    <string-array name="dino_icon">
        <item>@drawable/dino2</item>
        <item>@drawable/dino2</item>
        <item>@drawable/dino2</item>
        <item>@drawable/dino2</item>
        <item>@drawable/dino2</item>
        <item>@drawable/dino2</item>
        <item>@drawable/dino2</item>
        <item>@drawable/dino2</item>
    </string-array>
    <string-array name="dino_description">
        <item>Tyrannosauridae adalah famili dinosaurus Theropoda yang terkenal karena anggotanya yang besar dan ganas, termasuk yang paling terkenal, Tyrannosaurus rex.</item>
        <item> Stegosauridae adalah dinosaurus herbivora berukuran sedang hingga besar, dengan panjang tubuh mencapai sekitar 9 meter. Mereka memiliki badan yang besar, kaki yang pendek namun kuat, dan leher yang relatif pendek. Ciri khasnya adalah deretan lempeng tulang yang menjulang tinggi di sepanjang punggung, serta ekor yang bercabang.</item>
        <item> Triceratopsidae adalah famili dinosaurus herbivora yang terkenal dengan ciri khas tanduk besar dan bercabang di kepala mereka. Triceratops, spesies yang paling terkenal dari famili ini, memiliki tubuh besar dengan tiga tanduk di bagian atas kepala dan lempengan tulang besar di bagian belakang.</item>
        <item> dinosaurus herbivora berukuran sedang hingga besar, dengan panjang tubuh mencapai sekitar 9 meter. Mereka memiliki badan yang besar, kaki yang pendek namun kuat, dan leher yang relatif pendek. Ciri khasnya adalah deretan lempeng tulang yang menjulang tinggi di sepanjang punggung, serta ekor yang bercabang.</item>
        <item> Hadrosauridae, atau sering disebut sebagai "dinosaurus bebek", adalah famili dinosaurus herbivora dengan ciri khas rahang yang mirip paruh bebek dan seringkali memiliki kresta di kepala.</item>
        <item> Ceratopsidae adalah famili dinosaurus herbivora yang memiliki ciri khas tanduk dan lempeng tulang di kepala mereka. Dinosaurus dalam famili ini termasuk Triceratops dan lainnya.</item>
        <item>  Velociraptoridae adalah famili dinosaurus karnivora yang terkenal dengan kecepatan dan kecerdasannya. Salah satu contoh terkenal adalah Velociraptor.</item>
        <item> Ankylosauridae adalah famili dinosaurus herbivora yang memiliki tubuh dilindungi oleh tulang keras atau lempengan tulang. Mereka sering memiliki gada tulang di ujung ekor untuk pertahanan.</item>

    </string-array>
    <string-array name="dino_characteristic">
        <item>Tyrannosauridae umumnya memiliki kepala besar dengan rahang yang kuat, gigi-gigi yang besar dan tajam, serta lengan pendek yang memiliki cakar yang kuat. Tubuh mereka juga cukup besar dan memiliki kaki yang kuat untuk menopang berat badan mereka yang besar.</item>
        <item>Karakteristik fisik utama dari Stegosauridae adalah deretan lempeng tulang di punggung mereka, yang berfungsi sebagai perlindungan serta dapat berperan dalam regulasi suhu tubuh. Mereka juga memiliki ekor yang bercabang dengan sepasang tulang duri besar di ujungnya, yang kemungkinan digunakan untuk pertahanan diri.</item>
        <item>Tanduk dan lempengan tulang yang besar di kepala, tubuh besar, herbivora.</item>
        <item> Leher panjang, tubuh besar, ekor pendek, herbivora.</item>
        <item> Rahang mirip paruh bebek, kresta di kepala, herbivora.</item>
        <item>Tanduk dan lempeng tulang di kepala, tubuh besar, herbivora.</item>
        <item>Cepat, lincah, karnivora, memiliki cakar yang kuat.</item>
        <item>Tubuh dilindungi oleh tulang keras, gada tulang di ekor, herbivora.</item>
    </string-array>
    <string-array name="dino_habitat">
        <item> Anggota famili ini ditemukan di berbagai habitat, mulai dari dataran rendah hingga dataran tinggi. Mereka hidup di lingkungan yang umumnya hangat dan beragam, termasuk hutan dan padang rumput.</item>
        <item> Stegosauridae diperkirakan hidup di daerah dataran rendah dan hutan yang lembap pada masa itu. Mereka tersebar di berbagai wilayah, termasuk Amerika Utara, Eropa, dan Asia.</item>
        <item>  Umumnya hidup di daerah dataran rendah yang luas dengan vegetasi yang melimpah seperti padang rumput.</item>
        <item> Sauropoda banyak ditemukan di berbagai habitat, mulai dari hutan hujan hingga dataran luas, tetapi kebanyakan ditemukan di daerah yang subur dengan banyak tumbuhan.</item>
        <item> Umumnya hidup di daerah berawa atau wilayah dataran rendah dengan vegetasi yang melimpah.</item>
        <item> Umumnya hidup di daerah dataran rendah dengan vegetasi yang melimpah.</item>
        <item>  Umumnya hidup di berbagai habitat, dari hutan hujan hingga padang rumput.</item>
        <item> Umumnya hidup di daerah dataran rendah dengan vegetasi yang melimpah.</item>
    </string-array>
    <string-array name="dino_proces">
        <item> Anggota famili ini ditemukan di berbagai habitat, mulai dari dataran rendah hingga dataran tinggi. Mereka hidup di lingkungan yang umumnya hangat dan beragam, termasuk hutan dan padang rumput.</item>
        <item>Stegosauridae hidup pada periode Jura Akhir, sekitar 155 hingga 150 juta tahun yang lalu.</item>
        <item> Seperti halnya Triceratopsidae, masa hidup mereka juga tidak diketahui dengan pasti, tetapi diperkirakan mereka hidup cukup lama.</item>
        <item> Tidak pasti, tetapi diperkirakan hidup cukup lama, mungkin beberapa dekade.</item>
        <item> Tidak pasti, tetapi diperkirakan memiliki masa hidup yang cukup panjang.</item>
        <item>  Tidak pasti, tetapi diperkirakan memiliki masa hidup yang cukup singkat, mungkin beberapa dekade.</item>
        <item> Tidak pasti, tetapi diperkirakan hidup cukup lama, mungkin beberapa dekade.</item>
        <item> Anggota famili ini ditemukan di berbagai habitat, mulai dari dataran rendah hingga dataran tinggi. Mereka hidup di lingkungan yang umumnya hangat dan beragam, termasuk hutan dan padang rumput.</item>

    </string-array>
    <string-array name="dino_perilaku">
        <item>Diketahui bahwa Tyrannosauridae adalah pemangsa puncak dalam ekosistem mereka. Mereka memiliki perilaku pemangsa yang agresif dan mungkin memburu dalam kelompok kecil. Tyrannosaurus rex, contohnya, sering dianggap sebagai pemangsa soliter yang kuat, tetapi beberapa penelitian juga menunjukkan kemungkinan perilaku sosial dalam beberapa konteks.</item>
        <item>Diketahui bahwa Tyrannosauridae adalah pemangsa puncak dalam ekosistem mereka. Mereka memiliki perilaku pemangsa yang agresif dan mungkin memburu dalam kelompok kecil. Tyrannosaurus rex, contohnya, sering dianggap sebagai pemangsa soliter yang kuat, tetapi beberapa penelitian juga menunjukkan kemungkinan perilaku sosial dalam beberapa konteks.</item>
        <item>Diketahui bahwa Tyrannosauridae adalah pemangsa puncak dalam ekosistem mereka. Mereka memiliki perilaku pemangsa yang agresif dan mungkin memburu dalam kelompok kecil. Tyrannosaurus rex, contohnya, sering dianggap sebagai pemangsa soliter yang kuat, tetapi beberapa penelitian juga menunjukkan kemungkinan perilaku sosial dalam beberapa konteks.</item>
        <item>Diketahui bahwa Tyrannosauridae adalah pemangsa puncak dalam ekosistem mereka. Mereka memiliki perilaku pemangsa yang agresif dan mungkin memburu dalam kelompok kecil. Tyrannosaurus rex, contohnya, sering dianggap sebagai pemangsa soliter yang kuat, tetapi beberapa penelitian juga menunjukkan kemungkinan perilaku sosial dalam beberapa konteks.</item>
        <item>Diketahui bahwa Tyrannosauridae adalah pemangsa puncak dalam ekosistem mereka. Mereka memiliki perilaku pemangsa yang agresif dan mungkin memburu dalam kelompok kecil. Tyrannosaurus rex, contohnya, sering dianggap sebagai pemangsa soliter yang kuat, tetapi beberapa penelitian juga menunjukkan kemungkinan perilaku sosial dalam beberapa konteks.</item>
        <item>Diketahui bahwa Tyrannosauridae adalah pemangsa puncak dalam ekosistem mereka. Mereka memiliki perilaku pemangsa yang agresif dan mungkin memburu dalam kelompok kecil. Tyrannosaurus rex, contohnya, sering dianggap sebagai pemangsa soliter yang kuat, tetapi beberapa penelitian juga menunjukkan kemungkinan perilaku sosial dalam beberapa konteks.</item>
        <item>Diketahui bahwa Tyrannosauridae adalah pemangsa puncak dalam ekosistem mereka. Mereka memiliki perilaku pemangsa yang agresif dan mungkin memburu dalam kelompok kecil. Tyrannosaurus rex, contohnya, sering dianggap sebagai pemangsa soliter yang kuat, tetapi beberapa penelitian juga menunjukkan kemungkinan perilaku sosial dalam beberapa konteks.</item>
        <item>Diketahui bahwa Tyrannosauridae adalah pemangsa puncak dalam ekosistem mereka. Mereka memiliki perilaku pemangsa yang agresif dan mungkin memburu dalam kelompok kecil. Tyrannosaurus rex, contohnya, sering dianggap sebagai pemangsa soliter yang kuat, tetapi beberapa penelitian juga menunjukkan kemungkinan perilaku sosial dalam beberapa konteks.</item>

    </string-array>
    <string name="dinoss">Tyrex</string>
    <string name="info_dino_Nama">Nama Dino</string>
    <string name="info_dino_desc2">Deskripsi Dino</string>
    <string name="info_dino_karakteristik2">Karakteristik</string>
    <string name="info_dino_kelompok">Kelompok</string>
    <string name="info_dino_habitatt">habitat</string>
    <string name="info_dino_makanan">makanan</string>
    <string name="info_dino_panjang">panjang</string>
    <string name="info_dino_tinggi">tinggi</string>
    <string name="info_dino_bobot">bobot</string>
    <string name="info_dino_kelemahan">kelemahan</string>
</resources>