<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contentDescription="@string/app_name"
    tools:context=".DetailActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">


        <ImageView
            android:src="@drawable/dinosaurus2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            android:id="@+id/iikon"
            android:layout_width="121dp"
            android:layout_height="121dp"
            android:layout_marginTop="17dp"
            android:contentDescription="@string/dinoss"/>

        <TextView

            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iikon"
            android:id="@+id/nama_dino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_dino_Nama"/>

        <TextView

            android:text="@string/info_dino_desc2"
            android:textAlignment="textStart"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nama_dino"
            android:id="@+id/desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="17dp"/>

        <TextView
            android:id="@+id/Judul1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc"
            android:layout_marginStart="17dp"
            android:layout_marginTop="25dp"
            android:text="@string/info_dino_karakteristik2"
            android:textSize="21sp"
            android:textStyle="bold"/>

        <TextView

            android:text="@string/info_dino_karakteristik2"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Judul1"
            android:id="@+id/Detailkarakterr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"/>

        <TextView
            android:id="@+id/Judul2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Detailkarakterr"
            android:layout_marginStart="17dp"
            android:layout_marginTop="25dp"
            android:text="@string/info_dino_kelompok"
            android:textSize="21sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/DetailHabitat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:text="@string/info_dino_kelompok"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Judul2" />

        <TextView

            android:text="@string/info_dino_habitatt"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DetailHabitat"
            android:id="@+id/Judul3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="25dp"/>

        <TextView
            android:id="@+id/DetailProsesss"
            android:layout_width="0dp"
            android:text="@string/info_dino_habitatt"
            android:textAlignment="textStart"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"

            app:layout_constraintTop_toBottomOf="@+id/Judul3" />

        <TextView
            android:id="@+id/Judul4"
            android:layout_marginStart="17dp"
            android:layout_marginTop="25dp"
            android:text="@string/info_dino_makanan"
            android:textSize="21sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="25dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DetailProsesss" />

        <TextView
            android:id="@+id/Detailperilaku"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:text="@string/info_dino_makanan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Judul4" />

        <TextView
            android:id="@+id/Judul5"
            android:layout_marginStart="17dp"
            android:layout_marginTop="23dp"
            android:text="@string/info_dino_panjang"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/Detailperilaku" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:text="@string/info_dino_panjang"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/Detailpanjang"
            android:layout_width="0dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Judul5" />





        <TextView
            android:id="@+id/Judul6"
            android:layout_marginStart="17dp"
            android:layout_marginTop="23dp"
            android:text="@string/info_dino_tinggi"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/Detailpanjang" />




        <TextView
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:text="@string/info_dino_tinggi"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/Detailtinggi"
            android:layout_width="0dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Judul6" />


        <TextView
            android:id="@+id/Judul7"
            android:layout_marginStart="17dp"
            android:layout_marginTop="23dp"
            android:text="@string/info_dino_bobot"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/Detailtinggi" />



        <TextView
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:text="@string/info_dino_bobot"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/Detailbobot"
            android:layout_width="0dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Judul7" />

        <TextView
            android:id="@+id/Judul8"
            android:layout_marginStart="17dp"
            android:layout_marginTop="23dp"
            android:text="@string/info_dino_kelemahan"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/Detailbobot" />




        <TextView
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:text="@string/info_dino_kelemahan"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/Detailkelemahan"
            android:layout_width="0dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Judul8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>